<resources>
    <string name="app_name">MykotlinApplication</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">kotlin task page </string>
    <string name="Full_Name"> Full Name: Moody Segun</string>
    <string name="UserName"> Username : moodyshegs</string>
    <string name="Email_Address"> email: moodysegun2020@gmail.com
    </string>
    <string name="Tracks"> Tracks: frontend, backend, app development</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>
